force-app/main/default/objects/Smart_Fridge_Reading__e/Smart_Fridge_Reading__e.object-meta.xml
<CustomObject>
    <label>Smart_Fridge_Reading</label>
    <pluralLabel>Smart_Fridge_Readings</pluralLabel>
</CustomObject>