force-app/main/default/objects/Smart_Fridge_Reading__e/fields/door__c.field-meta.xml
<CustomField>
    <fullName>door__c</fullName>
    <label>door</label>
    <length>16</length>
    <type>Text</type>
</CustomField>