force-app/main/default/objects/Smart_Fridge_Reading__e/fields/ts__c.field-meta.xml
<CustomField>
    <fullName>ts__c</fullName>
    <label>ts</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>